--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>MY FIRST WEBSITE REPO</title>
 </head>
 <body>
-    
+    <h1>I CAN PUSH ANY CODE  TO GITHUB </h1>
+    <H2>AFTER PUSHING I CAN FOUND THAT CODE IN GITHUB REPO</H2>
+    <H3>NOW NEW CODE WILL BE ADDED IN GITHUB REPO</H3>
 </body>
 </html>
