--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY FIRST WEBSITE REPO</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>I CAN PUSH ANY CODE  TO GITHUB </h1>
     <H2>AFTER PUSHING I CAN FOUND THAT CODE IN GITHUB REPO</H2>
     <H3>NOW NEW CODE WILL BE ADDED IN GITHUB REPO</H3>
+    <p>MORE PARAGAPH</p>
+    <p>I AM CODING CODING AND CODING</p>
 </body>
 </html>
