--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <H3>NOW NEW CODE WILL BE ADDED IN GITHUB REPO</H3>
     <p>MORE PARAGAPH</p>
     <p>I AM CODING CODING AND CODING</p>
+    <img src="rain drops.jpg" alt="">
+    <img src="SNOW.JPG" alt="">
+    <img src="late autumn.JPG" alt="">
 </body>
 </html>
