--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <H3>NOW NEW CODE WILL BE ADDED IN GITHUB REPO</H3>
     <p>MORE PARAGAPH</p>
     <p>I AM CODING CODING AND CODING</p>
-    <img src="rain drops.jpg" alt="">
-    <img src="SNOW.JPG" alt="">
-    <img src="late autumn.JPG" alt="">
+    <img src="pictures/before strom.jpg" alt="">
+    <img src="pictures/lake island.jpg" alt="">
+    <img src="pictures/late autumn.jpg" alt="">
+    <img src="pictures/mountain.jpg" alt="">
+    <img src="pictures/rain drops.jpg" alt="">
+    <img src="pictures/snow.jpg" alt="">
 </body>
 </html>
