--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <H3>NOW NEW CODE WILL BE ADDED IN GITHUB REPO</H3>
     <p>MORE PARAGAPH</p>
     <p>I AM CODING CODING AND CODING</p>
-    <img src="pictures/before strom.JPG" alt="">
-    <img src="pictures/lake island.JPG" alt="">
-    <img src="pictures/late autumn.JPG" alt="">
-    <img src="pictures/mountain.JPG" alt="">
-    <img src="pictures/rain drops.JPG" alt="">
-    <img src="pictures/snow.JPG" alt="">
+    <img src="PICTURES/before strom.JPG" alt="">
+    <img src="PICTURES/lake island.JPG" alt="">
+    <img src="PICTURES/late autumn.JPG" alt="">
+    <img src="PICTURES/mountain.JPG" alt="">
+    <img src="PICTURES/rain drops.JPG" alt="">
+    <img src="PICTURES/snow.JPG" alt="">
 </body>
 </html>
